; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-mx1/extr_clock.c_perclk1_get_rate.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-mx1/extr_clock.c_perclk1_get_rate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk = type { i32 }

@CCM_PCDR = common dso_local global i32 0, align 4
@CCM_PCDR_PCLK1_MASK = common dso_local global i32 0, align 4
@CCM_PCDR_PCLK1_OFFSET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.clk*)* @perclk1_get_rate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @perclk1_get_rate(%struct.clk* %0) #0 {
  %2 = alloca %struct.clk*, align 8
  store %struct.clk* %0, %struct.clk** %2, align 8
  %3 = load %struct.clk*, %struct.clk** %2, align 8
  %4 = getelementptr inbounds %struct.clk, %struct.clk* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @clk_get_rate(i32 %5)
  %7 = load i32, i32* @CCM_PCDR, align 4
  %8 = call i32 @__raw_readl(i32 %7)
  %9 = load i32, i32* @CCM_PCDR_PCLK1_MASK, align 4
  %10 = and i32 %8, %9
  %11 = load i32, i32* @CCM_PCDR_PCLK1_OFFSET, align 4
  %12 = ashr i32 %10, %11
  %13 = add nsw i32 %12, 1
  %14 = sdiv i32 %6, %13
  %15 = sext i32 %14 to i64
  ret i64 %15
}

declare dso_local i32 @clk_get_rate(i32) #1

declare dso_local i32 @__raw_readl(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
